--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,18 +39,16 @@ jobs:
           key: v1-dependencies-{{ checksum "build.gradle" }}
 
       # run tests!
-      - run: ./gradlew clean test
+      - run: gradle clean test
       - run:
-          name: Save test results
+          name: Save tests results
           command: |
             mkdir -p ~/junit/
-          find . -type f -regex ".*/build/test-results/.*xml" -exec cp {} ~/junit/ \;
+            find . -type f -regex ".*/build/test-results/.*xml" -exec cp {} ~/junit/ \;
           when: always
-
-        -store_test_results:
+      - store_test_results:
           path: ~/junit
-
-        -setup_remote_docker
-        -run:
+      - setup_remote_docker:
+      - run: 
           name: Build Docker Image
           command: ./gradlew bootRepackage -Pprod buildDocker
